# s2-python

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  README.rst  challenges.db  debug_payload.json  dev-requirements.in  dev-requirements.txt  mypy.ini  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.in  requirements.txt  s2.db  setup.cfg  tox.ini
.github/: CODEOWNERS
.github/workflows/: ci.yml
ci/: clean.sh  distribute.sh  generate_s2.sh  install_dependencies.sh  lint.sh  setup_dev_environment.sh  test_unit.sh  typecheck.sh  update_dependencies.sh
development_utilities/: gen_templates.py  gen_unit_test_template.py  generate_s2_message_type_to_class.py  get_all_messages.py
examples/: async_frbc_rm.py  example_flask_server.py  example_frbc_rm.py  example_pairing_frbc_rm.py  example_s2_server.py  example_with_pairing_frbc_rm.py  mock_s2_server.py  mock_s2_websocket.py  sync_frbc_rm.py  test_ws.py
specification/: openapi.yml  s2-over-ip-pairing.yaml
src/: __init__.py
src/s2python/: __init__.py  example_frbc_rm.py  message.py  reception_status_awaiter.py  s2_asset_details.py  s2_connection.py  s2_control_type.py  s2_message_handlers.py  s2_pairing.py  s2_parser.py  s2_validation_error.py  utils.py  validate_values_mixin.py  version.py
src/s2python/authorization/: client.py  database.py  default_client.py  default_http_server.py  default_server.py  default_ws_server.py  fastapi_service.py  flask_http_server.py  flask_ws_server.py  server.py
src/s2python/common/: __init__.py  duration.py  handshake.py  handshake_response.py  instruction_status_update.py  number_range.py  power_forecast.py  power_forecast_element.py  power_forecast_value.py  power_measurement.py  power_range.py  power_value.py  reception_status.py  resource_manager_details.py  revoke_object.py  role.py  select_control_type.py  session_request.py  support.py  timer.py  transition.py
src/s2python/communication/: custom_thread_s2_connection.py  reception_status_awaiter.py  s2_connection.py
src/s2python/connection/: __init__.py  asset_details.py  connection_events.py  control_type.py  s2_async_connection.py  s2_sync_connection.py  types.py
src/s2python/ddbc/: __init__.py  ddbc_actuator_description.py  ddbc_actuator_status.py  ddbc_average_demand_rate_forecast.py  ddbc_average_demand_rate_forecast_element.py  ddbc_instruction.py  ddbc_operation_mode.py  ddbc_system_description.py  ddbc_timer_status.py
src/s2python/frbc/: __init__.py  frbc_actuator_description.py  frbc_actuator_status.py  frbc_fill_level_target_profile.py  frbc_fill_level_target_profile_element.py  frbc_instruction.py  frbc_leakage_behaviour.py  frbc_leakage_behaviour_element.py  frbc_operation_mode.py  frbc_operation_mode_element.py  frbc_storage_description.py  frbc_storage_status.py  frbc_system_description.py  frbc_timer_status.py  frbc_usage_forecast.py  frbc_usage_forecast_element.py
src/s2python/ombc/: __init__.py  ombc_instruction.py  ombc_operation_mode.py  ombc_status.py  ombc_system_description.py  ombc_timer_status.py
src/s2python/pairing/: __init__.py  pairing_response.py
src/s2python/pebc/: __init__.py  pebc_allowed_limit_range.py  pebc_energy_constraint.py  pebc_instruction.py  pebc_power_constraints.py  pebc_power_envelope.py  pebc_power_envelope_element.py  pebc_power_envelope_limit_type.py
src/s2python/ppbc/: __init__.py  ppbc_end_interruption_instruction.py  ppbc_power_profile_definition.py  ppbc_power_profile_status.py  ppbc_power_sequence.py  ppbc_power_sequence_container.py  ppbc_power_sequence_container_status.py  ppbc_power_sequence_element.py  ppbc_schedule_instruction.py  ppbc_start_interruption_instruction.py
src/s2python/websocket/: __init__.py  connection_client.py  pairing_client.py
src/s2wsjson/: __init__.py  s2_validation_error.py  validate_values_mixin.py
src/s2wsjson/common/: __init__.py  conversions.py  duration.py  handshake.py  handshake_response.py  instruction_status_update.py  number_range.py  number_range_inheritance.py  number_range_validator.py  power_forecast.py  power_forecast_element.py  power_forecast_value.py  power_measurement.py  power_range.py  power_value.py  reception_status.py  resource_manager_details.py  revoke_object.py  role.py  select_control_type.py  session_request.py  support.py  timer.py  transition.py
src/s2wsjson/frbc/: __init__.py  frbc_actuator_description.py  frbc_actuator_status.py  frbc_fill_level_target_profile.py  frbc_fill_level_target_profile_element.py  frbc_instruction.py  frbc_leakage_behaviour.py  frbc_leakage_behaviour_element.py  frbc_operation_mode.py  frbc_operation_mode_element.py  frbc_storage_description.py  frbc_storage_status.py  frbc_system_description.py  frbc_timer_status.py  frbc_usage_forecast.py  frbc_usage_forecast_element.py
tests/unit/: custom_thread_s2_connection_test.py  fast_api_test.py  fastapi_test.py  frbc_actuator_description_test.py  inheritance_test.py  message_test.py  reception_status_awaiter_test.py  s2_connection_test.py  s2_parser_test.py  utils_test.py  validate_values_mixing_test.py
tests/unit/common/: duration_test.py  handshake_response_test.py  handshake_test.py  instruction_status_update_test.py  number_range_inheritance_test.py  number_range_test.py  number_range_validator_test.py  power_forecast_element_test.py  power_forecast_test.py  power_forecast_value_test.py  power_measurement_test.py  power_range_test.py  power_value_test.py  reception_status_test.py  resource_manager_details_test.py  revoke_object_test.py  role_test.py  select_control_type_test.py  session_request_test.py  timer_test.py  transition_test.py
tests/unit/frbc/: frbc_actuator_description_test.py  frbc_actuator_status_test.py  frbc_fill_level_target_profile_element_test.py  frbc_fill_level_target_profile_test.py  frbc_instruction_test.py  frbc_leakage_behaviour_element_test.py  frbc_leakage_behaviour_test.py  frbc_operation_mode_element_test.py  frbc_operation_mode_test.py  frbc_storage_description_test.py  frbc_storage_status_test.py  frbc_system_description_test.py  frbc_timer_status_test.py  (+2 more)
(+22 files in other folders)
