[metadata]
name = s2-ws-json-python
description = S2 Protocol Python Wrapper
author = Flexiblepower
author_email = info@info.nl
license = APACHE
license_files = LICENSE.txt
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/flexiblepower/s2-ws-json-python
version = 0.1.0

# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = Linux

# Add here all kinds of additional classifiers as defined under
# https://pypi.org/classifiers/
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python


[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

# Require a min/specific Python version (comma-separated conditions)
python_requires >= 3.9

# Add here dependencies of your project (line-separated), e.g. requests>=2.2,<3.0.
# Version specifiers like >=2.2,<3.0 avoid problems due to API changes in
# new major versions. This works if the required packages follow Semantic Versioning.
# For more information, check out https://semver.org/.
install_requires =
    importlib-metadata; python_version<"3.8"
    pydantic<=1.10.7
    pytz
    click

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
testing =
    pytest
    pytest-coverage
    pytest-timer
    mypy
    pylint


development =
    pip-tools
    datamodel-code-generator
    pre-commit
    tox

docs =
    sphinx
    sphinx-rtd-theme >= 1.2
    sphinx-tabs
    sphinx_copybutton
    sphinx_fontawesome
    sphinxcontrib.httpdomain

[options.entry_points]
console_scripts =
    s2wsjson = s2wsjson.tools.cli:s2wsjson_cmd

[tool:pytest]
addopts =
    --cov=s2wsjson
    --cov-report=html:./unit_test_coverage/
    -v tests/unit/

testpaths = tests

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no_vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 88
extend_ignore = E203, W503
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py