[metadata]
name = s2-python
description = S2 Protocol Python Wrapper
author = Flexiblepower
author_email = info@info.nl
license = APACHE
license_files = LICENSE.txt
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/flexiblepower/s2-ws-json-python
version = 0.1.3

# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = Linux

# Add here all kinds of additional classifiers as defined under
# https://pypi.org/classifiers/
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12


[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

# Require a min/specific Python version (comma-separated conditions)
python_requires >= 3.8, <= 3.12

# Add here dependencies of your project (line-separated), e.g. requests>=2.2,<3.0.
# Version specifiers like >=2.2,<3.0 avoid problems due to API changes in
# new major versions. This works if the required packages follow Semantic Versioning.
# For more information, check out https://semver.org/.
install_requires =
    pydantic~=1.10.7
    pytz
    click

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
testing =
    pytest
    pytest-coverage
    pytest-timer
    mypy
    types-pytz
    pylint


development =
    pip-tools
    datamodel-code-generator
    pre-commit
    tox

docs =
    sphinx
    sphinx-rtd-theme >= 1.2
    sphinx-tabs
    sphinx_copybutton
    sphinx_fontawesome
    sphinxcontrib.httpdomain

[options.entry_points]
console_scripts =
    s2python = s2python.tools.cli:s2python_cmd

[tool:pytest]
addopts =
    --cov=s2python
    --cov-report=html:./unit_test_coverage/
    -v tests/unit/

testpaths = tests

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no_vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 88
extend_ignore = E203, W503
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
per-file-ignores =
    src/s2python/common/__init__.py:F401
    src/s2python/frbc/__init__.py:F401
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py