[metadata]

# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = Linux

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

[options.packages.find]
where = src
exclude =
    tests

[tool:pytest]
addopts =
    --cov=s2python
    --cov-report=html:./unit_test_coverage/
    -v tests/unit/

testpaths = tests

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no_vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 88
extend_ignore = E203, W503
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py